Change to login for all

--- a/apps/meal-delivery/src/app/auth/login/login.component.html
+++ b/apps/meal-delivery/src/app/auth/login/login.component.html
@@ -52,8 +52,7 @@
             Inloggen
           </button>
           <label class="move20right">
-            <a routerLink="/register">Wachtwoord
-              vergeten?</a>
+            <a routerLink="/register">Nog geen account? Meld je aan.</a>
           </label>
         </div>
       </div>
