--- a/apps/meal-delivery/src/app/pages/dashboard/dashboard.component.html
+++ b/apps/meal-delivery/src/app/pages/dashboard/dashboard.component.html
@@ -4,7 +4,10 @@
   </div>
   <div class="card-container">
     <a class="card" routerLink="/meal">
-      <h5>Maaltijden</h5>
+      <h5 *ngIf="loggedInUser$ | async as user;else other_content">Maaltijden</h5>
+      <ng-template #other_content>
+        <h5>Inloggen</h5>
+      </ng-template>
     </a>
     <a class="card" routerLink="/about-us">
       <h5>Over ons</h5>
