--- a/apps/meal-delivery/src/app/pages/meal/detail/detail.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/detail/detail.component.html
@@ -2,7 +2,9 @@
   <div class="col-sm-10 col-md-12 col-lg-9">
     <div class="d-flex justify-content-between align-items-center">
       <h3 class="card-title">Maaltijd {{meal?.name}}</h3>
-      <button type="button" class="btn btn-primary move5down" routerLink="edit">Maaltijd bewerken</button>
+      <button *ngIf="!isStudent" type="button" class="btn btn-primary move5down" routerLink="edit">Maaltijd
+        bewerken</button>
+      <button *ngIf="isStudent" type="button" class="btn btn-primary move5down" routerLink="/meal">Maaltijden</button>
     </div>
     <ul>
       <li>Eigenaar: {{meal?.owner.username}}</li>
