--- a/apps/meal-delivery/src/app/pages/dashboard/dashboard.component.html
+++ b/apps/meal-delivery/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="dashboard">
   <div class="card highlight-card card-small">
-    <h3>Welkom bij Gouden maaltijdbezorging</h3>
+    <h3>Welkom bij Gouden maaltijden</h3>
   </div>
   <div class="card-container">
     <a class="card" routerLink="/meal">
