--- a/apps/meal-delivery/src/app/pages/meal/detail/detail.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/detail/detail.component.html
@@ -9,10 +9,10 @@
     <ul>
       <li>Eigenaar: {{meal?.owner.username}}</li>
       <li>Prijs: € {{toDecimal(meal?.price)}}</li>
-      <li *ngIf="meal?.deliveryTime">Bezorgtijd: {{meal?.deliveryTime | date:"HH:mm"}}</li>
-      <li *ngIf="!meal?.deliveryTime">Bezorgtijd: maaltijd nog niet gereserveerd.</li>
-      <li *ngIf="meal?.deliveryDate">Bezorgdatum: {{meal?.deliveryDate | date: "dd-MM-YYYY"}}</li>
-      <li *ngIf="!meal?.deliveryDate">Bezorgdatum: maaltijd nog niet gereserveerd.</li>
+      <li *ngIf="meal?.deliveryTime">Ophaaltijd: {{meal?.deliveryTime | date:"HH:mm"}}</li>
+      <li *ngIf="!meal?.deliveryTime">Ophaaltijd: maaltijd nog niet gereserveerd.</li>
+      <li *ngIf="meal?.deliveryDate">Ophaaldatum: {{meal?.deliveryDate | date: "dd-MM-YYYY"}}</li>
+      <li *ngIf="!meal?.deliveryDate">Ophaaldatum: maaltijd nog niet gereserveerd.</li>
     </ul>
   </div>
 </div>
