--- a/apps/meal-delivery/src/app/pages/meal/list/list.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/list/list.component.html
@@ -19,8 +19,8 @@
                 <h5 class="card-title">{{meal.name}}</h5>
                 <ul class="noBullets">
                   <li>Eigenaar: {{meal.owner.username}}</li>
-                  <li>Bezorgtijd: {{meal?.deliveryTime | date:"HH:mm"}}</li>
-                  <li>Bezorgdatum: {{meal?.deliveryDate | date: "dd-MM-YYYY"}}</li>
+                  <li>Ophaaltijd: {{meal?.deliveryTime | date:"HH:mm"}}</li>
+                  <li>Ophaaldatum: {{meal?.deliveryDate | date: "dd-MM-YYYY"}}</li>
                   <li> <a routerLink="{{ meal.id }}" routerLinkActive="active" ariaCurrentWhenActive="page">Klik hier
                       voor meer details.</a></li>
                 </ul>
