--- a/apps/meal-delivery/src/app/shared/footer/footer.component.html
+++ b/apps/meal-delivery/src/app/shared/footer/footer.component.html
@@ -4,11 +4,11 @@
       <div class="row mt-2">
         <div class="col-md-6 col-lg-4 col-xl-5  mb-3">
           <h6 class="text-uppercase fw-bold mb-2">
-            <i class="fas fa-gem me-3"></i>Gouden maaltijdbezorging
+            <i class="fas fa-gem me-3"></i>Gouden maaltijden
           </h6>
           <p>
             Dit project is gemaakt voor het vak Client-side web programming voor de school van Avans. Je kunt hier
-            maaltijden reserveren als je in een studentenhuis woont en die maaltijd wordt dan bezorgd.
+            maaltijden reserveren uit een studentenhuis en als chef of beheerder een maaltijd toevoegen.
           </p>
         </div>
         <div class="col-md-2 col-lg-2 col-xl-1 mx-auto mb-3">
