--- a/apps/meal-delivery/src/app/pages/meal/detail/detail.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/detail/detail.component.html
@@ -7,7 +7,7 @@
       <button *ngIf="isStudent" type="button" class="btn btn-primary move5down" routerLink="/meal">Maaltijden</button>
     </div>
     <ul>
-      <li>Eigenaar: {{meal?.owner.username}}</li>
+      <li>Eigenaar: {{meal?.owner[0].username}}</li>
       <li>Prijs: € {{toDecimal(meal?.price)}}</li>
       <li *ngIf="meal?.deliveryTime">Ophaaltijd: {{meal?.deliveryTime | date:"HH:mm"}}</li>
       <li *ngIf="!meal?.deliveryTime">Ophaaltijd: maaltijd nog niet gereserveerd.</li>
