--- a/apps/meal-delivery/src/app/pages/meal/edit/edit.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/edit/edit.component.html
@@ -100,25 +100,9 @@
         </div>
         <!-- Submit en Cancel buttons -->
         <div class="row-5">
-          <div *ngIf="!componentExists" class="col">
+          <div class="col">
             <button type="submit" class="btn btn-primary mx-2 my-4" [disabled]="!mealEditForm.valid">
-              <div *ngIf="componentExists && meal">
-                Maaltijd bewerken
-              </div>
-              <div *ngIf="!componentExists">
-                Maaltijd toevoegen
-              </div>
-            </button>
-            <button type="button" class="btn btn-warning mx-2" routerLink="/meal">Annuleren</button>
-          </div>
-          <div *ngIf="componentExists && meal" class="col">
-            <button type="submit" class="btn btn-primary mx-2 my-4" [disabled]="!mealEditForm.valid">
-              <div *ngIf="componentExists && meal">
-                Maaltijd bewerken
-              </div>
-              <div *ngIf="!componentExists">
-                Maaltijd toevoegen
-              </div>
+              {{ componentExists && meal ? 'Maaltijd bewerken' : 'Maaltijd toevoegen' }}
             </button>
             <button type="button" class="btn btn-warning mx-2" routerLink="/meal">Annuleren</button>
           </div>
