--- a/apps/meal-delivery/src/app/pages/meal/list/list.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/list/list.component.html
@@ -14,7 +14,7 @@
       <div class="mb240">
         <div class="row">
           <div class="col-sm-12 col-md-auto col-lg-6" *ngFor="let meal of meals$ | async; let i = index">
-            <div *ngIf="isStudent || isAdmin || meal.owner.id == currentUserId" class="card">
+            <div *ngIf="isStudent || isAdmin || meal.ownerRef.id == currentUserId" class="card">
               <div class="card-body">
                 <h5 class="card-title">{{meal.name}}</h5>
                 <ul class="noBullets">
