--- a/apps/meal-delivery/src/app/pages/meal/orderlist/orderlist.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/orderlist/orderlist.component.html
@@ -11,11 +11,11 @@
       <div class="mb240">
         <div class="row">
           <div class="col-sm-12 col-md-auto col-lg-6" *ngFor="let meal of user?.meals; let i = index">
-            <div *ngIf="isStudent || isAdmin || meal.owner.id == currentUserId" class="card">
+            <div *ngIf="isStudent || isAdmin || meal.ownerRef.id == currentUserId" class="card">
               <div class="card-body">
                 <h5 class="card-title">{{meal.name}}</h5>
                 <ul class="noBullets">
-                  <li>Eigenaar: {{meal.owner.username}}</li>
+                  <li>Eigenaar: {{meal.ownerRef.username}}</li>
                   <li>Ophaaltijd: {{meal?.deliveryTime | date:"HH:mm"}}</li>
                   <li>Ophaaldatum: {{meal?.deliveryDate | date: "dd-MM-YYYY"}}</li>
                   <li> <a [routerLink]="['/meal', meal.id]" routerLinkActive="active" ariaCurrentWhenActive="page">Klik
