--- a/apps/meal-delivery/src/app/pages/meal/edit/edit.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/edit/edit.component.html
@@ -117,3 +117,55 @@
     </div><br>
   </form>
 </div>
+
+<div class="row container list">
+  <div class="d-flex justify-content-between align-items-center">
+    <h3 class="card-title">Producten lijst</h3>
+    <div>
+      <button type="button" class="btn btn-primary move5down" routerLink="new">Nieuwe product toevoegen</button>
+    </div>
+  </div>
+  <div class="row container">
+    <div class="col">
+      <br>
+      <div class="mb240">
+        <div class="row">
+          <div class="col-sm-12 col-md-auto col-lg-4" *ngFor="let product of products$ | async; let i = index">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">{{product.name}}</h5>
+                <ul class="noBullets">
+                  <li *ngIf="product?.allergies.length>0; else noAllergies">Allergieën: {{ product?.allergies.join(', ')
+                    }}</li>
+                  <ng-template #noAllergies>
+                    <li>Product bevat geen allergieën.</li>
+                  </ng-template>
+                  <li *ngIf="product?.containsAlcohol">Product bevat alcohol.</li>
+                  <li *ngIf="!product?.containsAlcohol">Product bevat geen alcohol.</li>
+                  <li><a [routerLink]="['/product', product.id]" routerLinkActive="active"
+                      ariaCurrentWhenActive="page">Klik
+                      hier
+                      voor meer details.</a></li>
+                </ul>
+                <div class="alignEnd">
+                  <a class="add" title="Product toevoegen" data-toggle="tooltip"
+                    (click)="addProductToMeal(product.id!, meal.id!)" routerLinkActive="active">
+                    <i class="material-icons">add</i>
+                  </a>
+                  <a class="delete" title="Product uit lijst halen" data-toggle="tooltip"
+                    (click)="removeProductFromMeal(product.id!, meal.id!)" routerLinkActive="active">
+                    <i class="material-icons">cancel</i>
+                  </a>
+                  <a class="edit" title="Bewerken" data-toggle="tooltip" [routerLink]="['/product', product.id, 'edit']"
+                    routerLinkActive="active"><i class="material-icons">&#xE254;</i></a>
+                  <a class="delete" title="Verwijderen" data-toggle="tooltip" (click)="deleteProduct(product.id!)"
+                    routerLinkActive="active"><i class="material-icons">&#xE872;</i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
