--- a/apps/meal-delivery/src/app/pages/meal/edit/edit.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/edit/edit.component.html
@@ -134,18 +134,15 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">{{product.name}}</h5>
-                <ul class="noBullets">
-                  <li *ngIf="product?.allergies.length>0; else noAllergies">Allergieën: {{ product?.allergies.join(', ')
-                    }}</li>
+                <ul class="no-bullets">
+                  <li *ngIf="product?.allergies.length > 0; else noAllergies">
+                    Allergieën: {{ product?.allergies.join(', ') }}</li>
                   <ng-template #noAllergies>
                     <li>Product bevat geen allergieën.</li>
                   </ng-template>
-                  <li *ngIf="product?.containsAlcohol">Product bevat alcohol.</li>
-                  <li *ngIf="!product?.containsAlcohol">Product bevat geen alcohol.</li>
+                  <li>Product bevat{{product?.containsAlcohol ? '' : ' geen'}} alcohol.</li>
                   <li><a [routerLink]="['/product', product.id]" routerLinkActive="active"
-                      ariaCurrentWhenActive="page">Klik
-                      hier
-                      voor meer details.</a></li>
+                      ariaCurrentWhenActive="page">Klik hier voor meer details.</a></li>
                 </ul>
                 <div class="alignEnd">
                   <a class="add" title="Product toevoegen" data-toggle="tooltip"
