--- a/apps/meal-delivery/src/app/pages/studentHouse/list/list.component.html
+++ b/apps/meal-delivery/src/app/pages/studentHouse/list/list.component.html
@@ -15,7 +15,7 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">{{studentHouse.streetAndNmr}}</h5>
-                <ul class="noBullets">
+                <ul class="no-bullets">
                   <li>Stad: {{studentHouse.city}}</li>
                   <li>Postcode: {{studentHouse.postcode}}</li>
                   <li><a routerLink="{{ studentHouse.id }}" routerLinkActive="active" ariaCurrentWhenActive="page">Klik
