--- a/apps/meal-delivery/src/app/pages/meal/detail/detail.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/detail/detail.component.html
@@ -2,20 +2,52 @@
   <div class="col-sm-10 col-md-12 col-lg-9">
     <div class="d-flex justify-content-between align-items-center">
       <h3 class="card-title">Maaltijd {{meal?.name}}</h3>
-      <button *ngIf="!isStudent" type="button" class="btn btn-primary move5down" routerLink="edit">Maaltijd
-        bewerken</button>
-      <button *ngIf="isStudent" type="button" class="btn btn-primary move5down" routerLink="/meal">Maaltijden</button>
+      <button type="button" class="btn btn-primary move5down" [routerLink]="isStudent ? '/meal' : 'edit'">
+        {{ isStudent ? 'Maaltijden' : 'Maaltijd bewerken' }}
+      </button>
     </div>
     <ul>
-      <li>Eigenaar: {{meal?.owner[0].username}}</li>
+      <li>Eigenaar: {{meal?.owner[0]?.username}}</li>
       <li>Prijs: € {{toDecimal(meal?.price)}}</li>
-      <li *ngIf="meal?.deliveryTime">Ophaaltijd: {{meal?.deliveryTime | date:"HH:mm"}}</li>
-      <li *ngIf="!meal?.deliveryTime">Ophaaltijd: maaltijd nog niet gereserveerd.</li>
-      <li *ngIf="meal?.deliveryDate">Ophaaldatum: {{meal?.deliveryDate | date: "dd-MM-YYYY"}}</li>
-      <li *ngIf="!meal?.deliveryDate">Ophaaldatum: maaltijd nog niet gereserveerd.</li>
-      <li *ngIf="meal?.studentHouse">Plaats: {{meal?.studentHouse.streetAndNmr}}, {{meal?.studentHouse.city}},
-        {{meal?.studentHouse.postcode}}
-      </li>
+      <ng-container *ngIf="meal as m; else notReserved">
+        <li>Ophaaltijd: {{m.deliveryTime | date:'HH:mm'}}</li>
+        <li>Ophaaldatum: {{m.deliveryDate | date: 'dd-MM-YYYY'}}</li>
+      </ng-container>
+      <ng-template #notReserved>
+        <li>Ophaaltijd: maaltijd nog niet gereserveerd.</li>
+        <li>Ophaaldatum: maaltijd nog niet gereserveerd.</li>
+      </ng-template>
     </ul>
+
+    <h4 class="card-title">Producten:</h4>
+    <ng-container *ngIf="meal">
+      <div *ngIf="meal.products.length <= 0" class="row">
+        <p>Er zijn geen producten aan deze maaltijd toegevoegd.</p>
+      </div>
+      <div class="row">
+        <div class="col">
+          <br>
+          <div class="mb240">
+            <div class="row">
+              <div class="col-sm-12 col-md-auto col-lg-4" *ngFor="let product of meal.products; trackBy: trackByFn">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">{{product.name}}</h5>
+                    <ul class="no-bullets">
+                      <li>{{ product?.allergies.length > 0 ? 'Allergieën: ' +
+                        product.allergies.join(', ') : 'Product bevat geen allergieën.' }}</li>
+                      <li>{{ product?.containsAlcohol ? 'Product bevat alcohol.' : 'Product bevat geen alcohol.' }}
+                      </li>
+                      <li><a [routerLink]="['/product', product.id]" routerLinkActive="active"
+                          ariaCurrentWhenActive="page">Klik hier voor meer details.</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </ng-container>
   </div>
 </div>
