--- a/apps/meal-delivery/src/app/pages/meal/list/list.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/list/list.component.html
@@ -17,7 +17,7 @@
             <div *ngIf="isStudent || isAdmin || meal.ownerRef.id == currentUserId" class="card">
               <div class="card-body">
                 <h5 class="card-title">{{meal.name}}</h5>
-                <ul class="noBullets">
+                <ul class="no-bullets">
                   <li>Ophaaltijd: {{meal?.deliveryTime | date:"HH:mm"}}</li>
                   <li>Ophaaldatum: {{meal?.deliveryDate | date: "dd-MM-YYYY"}}</li>
                   <li *ngIf="meal?.studentHouse">Plaats: {{meal?.studentHouse.streetAndNmr}},
