--- a/apps/meal-delivery/src/app/shared/nav/nav.component.html
+++ b/apps/meal-delivery/src/app/shared/nav/nav.component.html
@@ -16,13 +16,14 @@
       </ul>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/product" *ngIf="loggedInUser$ | async as user">Producten</a>
+      <a class="nav-link" routerLink="/product" *ngIf="!isStudent && loggedInUser$ | async as user">Producten</a>
     </li>
     <li class="nav-item" *ngIf="loggedInUser$ | async as user">
       <a *ngIf="isAdmin" class="nav-link" routerLink="/user">Gebruikers</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/studentHouse" *ngIf="loggedInUser$ | async as user">Studentenhuizen</a>
+      <a class="nav-link" routerLink="/studentHouse"
+        *ngIf="!isStudent && loggedInUser$ | async as user">Studentenhuizen</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="/about-us">Over ons</a>
