--- a/apps/meal-delivery/src/app/pages/product/detail/detail.component.html
+++ b/apps/meal-delivery/src/app/pages/product/detail/detail.component.html
@@ -5,11 +5,8 @@
       <button type="button" class="btn btn-primary move5down" routerLink="edit">Product bewerken</button>
     </div>
     <ul>
-      <li *ngIf="product?.allergies.length>0; else noAllergies">Allergieën: {{ product?.allergies.join(', ')
-        }}</li>
-      <ng-template #noAllergies>
-        <li>Product bevat geen allergieën.</li>
-      </ng-template>
+      <li> {{ product?.allergies.length > 0 ? 'Allergieën: ' +
+        product?.allergies.join(', ') : 'Product bevat geen allergieën.' }}</li>
       <li *ngIf="product?.containsAlcohol">Product bevat alcohol.</li>
       <li *ngIf="!product?.containsAlcohol">Product bevat geen alcohol.</li>
     </ul>
