--- a/apps/meal-delivery/src/app/pages/product/list/list.component.html
+++ b/apps/meal-delivery/src/app/pages/product/list/list.component.html
@@ -22,9 +22,8 @@
                   </ng-template>
                   <li *ngIf="product?.containsAlcohol">Product bevat alcohol.</li>
                   <li *ngIf="!product?.containsAlcohol">Product bevat geen alcohol.</li>
-                  <li><a routerLink="{{ product.id }}" routerLinkActive="active" ariaCurrentWhenActive="page">Klik
-                      hier
-                      voor meer details.</a></li>
+                  <li><a [routerLink]="['/product', product.id]" routerLinkActive="active"
+                      ariaCurrentWhenActive="page">Klik hier voor meer details.</a></li>
                 </ul>
                 <div class="alignEnd"><a class="edit" title="Bewerken" data-toggle="tooltip"
                     routerLink="{{ product.id }}/edit" routerLinkActive="active"><i
