--- a/apps/meal-delivery/src/app/pages/meal/detail/detail.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/detail/detail.component.html
@@ -29,7 +29,8 @@
           <br>
           <div class="mb240">
             <div class="row">
-              <div class="col-sm-12 col-md-auto col-lg-4" *ngFor="let product of meal.products; trackBy: trackByFn">
+              <div class="col-sm-12 col-md-auto col-lg-3 mx-2"
+                *ngFor="let product of meal.products; trackBy: trackByFn">
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">{{product.name}}</h5>
