--- a/apps/meal-delivery/src/app/pages/user/detail/detail.component.html
+++ b/apps/meal-delivery/src/app/pages/user/detail/detail.component.html
@@ -2,7 +2,8 @@
   <div class="col-sm-10 col-md-12 col-lg-9">
     <div class="d-flex justify-content-between align-items-center">
       <h3 class="card-title">Profiel van {{user?.username}}</h3>
-      <button type="button" class="btn btn-primary move5down" routerLink="edit">Gebruiker bewerken</button>
+      <button type="button" class="btn btn-primary move5down" routerLink="edit" *ngIf="isAdmin">Gebruiker
+        bewerken</button>
     </div>
     <ul>
       <li>E-mailadres: {{user?.emailAddress}}</li>
@@ -10,5 +11,39 @@
       <li *ngIf="!user?.isGraduated">Is nog niet afgestudeerd.</li>
       <li>Rol: {{user?.role}}</li>
     </ul>
+
+    <h4 class="card-title">Maaltijden:</h4>
+    <ng-container *ngIf="user">
+      <div *ngIf="user.meals.length <= 0" class="row">
+        <p>Er zijn geen maaltijden gereserveerd.</p>
+      </div>
+      <div class="row">
+        <div class="col">
+          <br>
+          <div class="mb240">
+            <div class="row">
+              <div class="col-sm-12 col-md-auto col-lg-4 mx-2" *ngFor="let meal of user.meals; trackBy: trackByFn">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">{{meal.name}}</h5>
+                    <ul class="no-bullets">
+                      <li>Ophaaltijd: {{meal?.deliveryTime | date:"HH:mm"}}</li>
+                      <li>Ophaaldatum: {{meal?.deliveryDate | date: "dd-MM-YYYY"}}</li>
+                      <li *ngIf="meal?.studentHouse">Plaats: {{meal?.studentHouse.streetAndNmr}},
+                        {{meal?.studentHouse.city}},
+                        {{meal?.studentHouse.postcode}}
+                      </li>
+                      <li><a [routerLink]="['/meal', meal.id]" routerLinkActive="active"
+                          ariaCurrentWhenActive="page">Klik hier voor meer details.</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </ng-container>
+
   </div>
 </div>
