--- a/apps/meal-delivery/src/app/shared/nav/nav.component.html
+++ b/apps/meal-delivery/src/app/shared/nav/nav.component.html
@@ -19,7 +19,7 @@
       <a class="nav-link" routerLink="/product" *ngIf="!isStudent && loggedInUser$ | async as user">Producten</a>
     </li>
     <li class="nav-item" *ngIf="loggedInUser$ | async as user">
-      <a *ngIf="isAdmin" class="nav-link" routerLink="/user">Gebruikers</a>
+      <a *ngIf="!isStudent" class="nav-link" routerLink="/user">Gebruikers</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="/studentHouse"
