Whatever, same for owner

--- a/apps/meal-delivery/src/app/pages/user/list/list.component.html
+++ b/apps/meal-delivery/src/app/pages/user/list/list.component.html
@@ -9,8 +9,7 @@
         <table class="table table-bordered table-dark minWi103">
           <thead>
             <tr>
-              <th *ngIf="isAdmin" scope="col">id</th>
-              <th *ngIf="!isAdmin" scope="col">Bestelde maaltijden</th>
+              <th scope="col">Bestelde maaltijden</th>
               <th scope="col">Gebruikersnaam</th>
               <th scope="col">E-mailadres</th>
               <th *ngIf="isAdmin" scope="col"></th>
