--- a/apps/meal-delivery/src/app/pages/meal/edit/edit.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/edit/edit.component.html
@@ -32,7 +32,7 @@
       <div class="col-5">
         <div class="form-group">
           <label for="price">Prijs</label>
-          <div *ngIf="meal?.price">
+          <div>
             <input type="number" id="price" pattern="^\d*(\.\d{0,2})?$" name="price" class="form-control"
               [(ngModel)]="meal!.price" #price="ngModel" required
               [ngClass]="{'is-invalid': price.invalid && price.touched}" />
@@ -108,10 +108,7 @@
           </div>
         </div>
       </div>
-      <div *ngIf="componentExists" class="col-5 prejson">
-        <pre>{{meal | json}}</pre>
-      </div>
-      <div *ngIf="!componentExists" class="col-5">
+      <div class="col-5" [ngClass]="{'prejson': componentExists}">
         <pre>{{ meal | json }}</pre>
       </div>
     </div><br>
@@ -122,7 +119,8 @@
   <div class="d-flex justify-content-between align-items-center">
     <h3 class="card-title">Producten lijst</h3>
     <div>
-      <button type="button" class="btn btn-primary move5down" routerLink="new">Nieuwe product toevoegen</button>
+      <button type="button" class="btn btn-primary mt-5" [routerLink]="['/product', 'new']">Voeg nieuw product
+        toe</button>
     </div>
   </div>
   <div class="row container">
