--- a/apps/meal-delivery/src/app/pages/meal/orderlist/orderlist.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/orderlist/orderlist.component.html
@@ -5,6 +5,9 @@
       <button type="button" class="btn btn-primary move5down" routerLink="/meal">Nieuwe maaltijd toevoegen</button>
     </div>
   </div>
+  <div *ngIf="user?.meals?.length <= 0" class="row">
+    <p>Er zijn geen maaltijden gereserveerd.</p>
+  </div>
   <div class="row container">
     <div class="col">
       <br>
