--- a/apps/meal-delivery/src/app/pages/product/detail/detail.component.html
+++ b/apps/meal-delivery/src/app/pages/product/detail/detail.component.html
@@ -2,7 +2,9 @@
   <div class="col-sm-10 col-md-12 col-lg-9">
     <div class="d-flex justify-content-between align-items-center">
       <h3 class="card-title">Product {{ product?.name }}</h3>
-      <button type="button" class="btn btn-primary move5down" routerLink="edit">Product bewerken</button>
+      <button type="button" class="btn btn-primary move5down" [routerLink]="!isStudent ? 'edit' : '/meal'">
+        {{ !isStudent ? 'Product bewerken' : 'Maaltijden' }}
+      </button>
     </div>
     <ul>
       <li> {{ product?.allergies.length > 0 ? 'Allergieën: ' +
