--- a/apps/meal-delivery/src/app/pages/dashboard/dashboard.component.html
+++ b/apps/meal-delivery/src/app/pages/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     <h3>Welkom bij Gouden maaltijden</h3>
   </div>
   <div class="card-container">
-    <a class="card" routerLink="/meal">
+    <a class="card meal-card" routerLink="/meal">
       <h5 *ngIf="loggedInUser$ | async as user;else other_content">Maaltijden</h5>
       <ng-template #other_content>
         <h5>Inloggen</h5>
